<resources>
    <string name="app_name">Cosmestic Store</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="forgotpassword"><u>Quên mật khẩu?</u></string>
    <string name="admin">Đăng nhập dành cho quản trị viên</string>
    <string name="xinchao"><u>bạn!</u></string>

    <string name="channel_name">Channel 1</string>
    <string name="channel_description">This is channel 1</string>
    <string name="cosmetics_store">Cosmetics Store</string>
    <string name="password">Nhập mật khẩu</string>
    <string name="Login">Đăng nhập</string>
    <string name="register">Đăng ký</string>
    <string name="update_product">Cập nhật sản phẩm</string>

</resources>